tests/golden/3-basic-and-simple-literals/invalid/common/bad-boolean-literals-5.yini
^ App
public      = yesno      # ❌ Not a valid boolean literal
hidden      = xxx        # ❌ Not a valid boolean literal
active2     = trues      # ❌ Typo, not a valid literal
